[package]
name = "atomic-counter"
version = "1.0.1"
authors = ["Kosta Welke <theoneandonlykosta@gmail.com>"]
description = "Atomic (thread-safe) counters for Rust"
documentation = "https://docs.rs/atomic-counter"
repository = "https://github.com/kosta/atomic-counter"
readme = "Readme.md"
license = "MIT"

[dependencies]
